feature: added disk and package